# waterbear

./: .gitignore  .travis.yml  Cargo.toml  Cross.toml  LICENSE  README.md  build-releases.sh  build.rs  example.s  example2.s  pom.xml
docs/: .#examples  debug.md  directives.md  examples  index.md  instruction-reference.md  instructions.md  macros.md
docs/assets/: style.css
instruction-derive/: Cargo.toml
instruction-derive/src/: lib.rs
libwaterbear/: Cargo.toml
libwaterbear/examples/: main.c
libwaterbear/include/: waterbear.h
libwaterbear/src/: lib.rs
macros/: arithmetic.s  basic.s
src/: asm.rs  ast.rs  cheader.rs  cli.rs  debug.rs  disasm.rs  env.rs  expression.rs  files.rs  img.rs  input.rs  instruction.rs  intern.rs  lexer.rs  lib.rs  location.rs  main.rs  metadata.rs  module.rs  parser.rs  unique_id.rs
src/asm/: ast.rs  expression.rs  instruction.rs  mod.rs  num.rs  parser.rs
src/chip8/: ast.rs  cli.rs  disasm.rs  mod.rs  vmu.rs
src/main/java/org/bovinegenius/wombat/gll/: Combinators.java  Parser.java  Result.java  StringCharSequence.java
src/main/java/org/bovinegenius/wombat/gll/parser/: Parser.java
src/main/java/org/bovinegenius/wombat/gss/: GraphStructuredStack.java
src/main/java/org/bovinegenius/wombat/regex/: Regex.java
src/main/java/org/bovinegenius/wombat/regex/ast/: RegexAlternate.java  RegexCaptureGroup.java  RegexCharacter.java  RegexKleeneStar.java  RegexNode.java  RegexNodeType.java  RegexPlus.java  RegexQuestion.java  RegexSequence.java
src/wasm/: cli.rs  ir.rs  mod.rs
test-projects/basic/: basic-quoted.s  basic.s  inc-quoted.h  inc.h  inc.i
tests/: end_to_end.rs
waterbear-instruction-derive/: Cargo.toml
waterbear-instruction-derive/src/: lib.rs
