[package]
edition = "2018" 
name = "waterbear"
description = "Assembler/Disassembler for the Dreamcast VMU"
version = "0.20.0"
authors = ["Walter Tetzner <walter@waltertetzner.net>"]
license="Apache-2.0"

[dependencies]
lazy_static = "1.0"
unicode-segmentation = "1.2.0"
clap = "2.33.3"
regex = "1.0"
termcolor = "1"
atty = "0.2"
uuid = { version = "0.7", features = ["v4"] }
image = "*"
chrono = "0.4"
serde_json = "1.0"
serde = { version = "*", features = ["derive"] }
enum-iterator = "*"

# custom derives
waterbear-instruction-derive = { version = "0.1", path = "waterbear-instruction-derive" }

[lib]
name = "waterbear"
path = "src/lib.rs"

[[bin]]
name = "waterbear"
path = "src/main.rs"
