[package]
edition = "2018" 
name = "waterbear"
description = "Assembler/Disassembler for the Dreamcast VMU"
version = "0.21.0-wip"
authors = ["Walter Tetzner <walter@waltertetzner.net>"]
license="Apache-2.0"

[dependencies]
lazy_static = "*"
unicode-segmentation = "*"
clap = "2.33.3"
regex = "*"
termcolor = "*"
atty = "*"
uuid = { version = "*", features = ["v4"] }
image = "*"
chrono = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
enum-iterator = "*"

# custom derives
waterbear-instruction-derive = { version = "0.1", path = "waterbear-instruction-derive" }

[lib]
name = "waterbear"
path = "src/lib.rs"

[[bin]]
name = "waterbear"
path = "src/main.rs"
