[package]
edition = "2024"
name = "waterbear"
description = "Assembler/Disassembler for the Dreamcast VMU"
version = "0.24.0-wip"
authors = ["Walter Tetzner <walter@waltertetzner.net>"]
license="Apache-2.0"

[dependencies]
lazy_static = "*"
unicode-segmentation = "*"
clap = { version = "*", features = ["derive"] }
regex = "*"
termcolor = "*"
atty = "*"
uuid = { version = "*", features = ["v4"] }
image = "0.24.5"
chrono = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
enum-iterator = "*"

# custom derives
waterbear-instruction-derive = { version = "0.1", path = "waterbear-instruction-derive" }

[dev-dependencies]
assert_cmd = "*"
predicates = "*"
assert_fs = "*"
anyhow = "*"
sha2 = "*"
data-encoding = "*"

[lib]
name = "waterbear"
path = "src/lib.rs"

[[bin]]
name = "waterbear"
path = "src/main.rs"
